# hyprland-plugins

./: .gitignore  CMakeLists.txt  README.md  flake.nix  hyprload.toml  hyprpm.toml
.github/ISSUE_TEMPLATE/: hyprpill-bug.md
hyprbars/: barDeco.cpp  barDeco.hpp  main.cpp
hyprpill/: CMakeLists.txt  Makefile  PillPassElement.cpp  PillPassElement.hpp  README.md  default.nix  globals.hpp  main.cpp  meson.build  pillDeco.cpp  pillDeco.hpp
liquiddock/: CMakeLists.txt  DockPassElement.cpp  DockPassElement.hpp  Makefile  README.md  default.nix  dockSurface.cpp  dockSurface.hpp  globals.hpp  main.cpp  meson.build
